--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,17 @@ form input[type=text] {
   border: 1px solid var(--blue);
 }
 
+.progress {
+  border-radius: 50%;
+  width: 3.25rem;
+  height: 3.25rem;
+  border: 5px solid #307bbe;
+  border-left-color: #e8e8e8;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  margin-right: 10px;
+}
+
 .book-card {
   padding: 2em;
   border: 1px solid var(--gray);
